<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_setting"
        android:title="@string/action_setting"
        android:orderInCategory="100"
        app:showAsAction = "ifRoom"/>
    <item android:id="@+id/logout"
        android:title="@string/logout"
        android:orderInCategory="200"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_copyright"
        android:title="@string/action_copyright"
        android:orderInCategory="200"
        app:showAsAction="never" />
</menu>